storage/innobase/trx/trx0roll.cc
@@ -208,7 +208,7 @@ dberr_t trx_rollback_for_mysql(trx_t* trx)
 		ut_ad(trx->mysql_thd);
 #ifdef WITH_WSREP
 		trx->wsrep= false;
-		trx->lock.was_chosen_as_wsrep_victim= false;
+		trx->lock.was_chosen_as_deadlock_victim= false;
 #endif
 		return(DB_SUCCESS);
 
@@ -430,7 +430,7 @@ trx_rollback_to_savepoint_for_mysql_low(
 
 	trx->op_info = "";
 #ifdef WITH_WSREP
-	trx->lock.was_chosen_as_wsrep_victim = false;
+	trx->lock.was_chosen_as_deadlock_victim = false;
 #endif
 	return(err);
 }
